src/component/heatmap/snapshots/envision__component__heatmap__snapshot_tests__snapshot_1x1_grid.snap
---
source: src/component/heatmap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────┐
│                  │
│                  │
│                  │
│                  │
└──────────────────┘
