src/component/heatmap/snapshots/envision__component__heatmap__snapshot_tests__snapshot_small_grid.snap
---
source: src/component/heatmap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
