src/component/heatmap/snapshots/envision__component__heatmap__snapshot_tests__snapshot_with_labels.snap
---
source: src/component/heatmap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Schedule────────────────────────────────────────┐
│         Mon            Tue            Wed      │
│AM                                              │
│PM                                              │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
