src/component/heatmap/snapshots/envision__component__heatmap__snapshot_tests__snapshot_with_values.snap
---
source: src/component/heatmap/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Values────────────────────────────────┐
│        1.5                2.7        │
│        3.1                4.9        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
