src/component/heatmap/snapshots/envision__component__heatmap__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/heatmap/snapshot_tests.rs
expression: terminal.backend().to_string()
---

